infra/k8s/overlays/apps/erp/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-ingress
spec:
  rules:
    - host: api.staging.sektor.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erp-backend
                port:
                  number: 8082
    - host: staging.sektor.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erp-web
                port:
                  number: 80
